--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = 741c753
-	trimbase = 45655f5
+	trimbase = 
 	parent = upstream
 	previous = f56188e
