--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 0164fcd
-	trimbase = 
+	base = f3ad4aa
+	trimbase = 0164fcd
 	parent = upstream
 	previous = 690d421
