--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 676bb02
-	trimbase = 
+	base = f9fccd0
+	trimbase = 676bb02
 	parent = upstream
 	previous = 690d421
