--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = bd0b31d
-	trimbase = 
+	base = 6153de7
+	trimbase = bd0b31d
 	parent = upstream
 	previous = 690d421
