--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
 	base = 1c5b5e0
-	trimbase = 5e19355
+	trimbase = 
 	parent = upstream
 	previous = f56188e
