--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
 	base = 9720940
-	trimbase = 497a48c
+	trimbase = 
 	parent = upstream
 	previous = f56188e
