--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 2bd3ab3
-	trimbase = 
+	base = 9109d0c
+	trimbase = 2bd3ab3
 	parent = upstream
 	previous = 690d421
