--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = acad0ec
-	trimbase = 
+	base = d6b3405
+	trimbase = acad0ec
 	parent = upstream
 	previous = 690d421
