--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdhx
-	base = 56e6b7e
-	trimbase = 
+	base = f75b80a
+	trimbase = 56e6b7e
 	parent = upstream
 	previous = 690d421
