--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>schunk_sdh</name>
-  <version>0.6.6</version>
+  <version>0.6.7</version>
   <description>This package provides an interface for operating the schunk dexterous hand (SDH), including the tactile sensors.</description>
 
   <license>LGPL</license>
@@ -15,6 +15,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
+  <build_depend>roslint</build_depend>
   <exec_depend>message_runtime</exec_depend>
 
   <depend>actionlib</depend>
