--- a/schunk_powercube_chain/package.xml
+++ b/schunk_powercube_chain/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>schunk_powercube_chain</name>
-  <version>0.6.7</version>
+  <version>0.6.8</version>
   <description>This packages provides a configurable driver of a chain
   of Schunk powercubes. The powercube chain is configured
   through parameters. Most users will not directly interact
@@ -22,6 +22,7 @@
   <depend>diagnostic_msgs</depend>
   <depend>libntcan</depend>
   <depend>libpcan</depend>
+  <depend>linux-headers-generic</depend>
   <depend>roscpp</depend>
   <depend>schunk_libm5api</depend>
   <depend>sensor_msgs</depend>
