--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 3531fb9
-	trimbase = 
+	base = 7ce3afb
+	trimbase = 3531fb9
 	parent = upstream
 	previous = a868845
