--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 9369283
-	trimbase = 
+	base = ca7e650
+	trimbase = 9369283
 	parent = upstream
 	previous = a868845
