--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = cbfa385
-	trimbase = 
+	base = f16606a
+	trimbase = cbfa385
 	parent = upstream
 	previous = a868845
