--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
 	base = 12036d8
-	trimbase = 08126e3
+	trimbase = 
 	parent = upstream
 	previous = 690d421
