--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 5239ca5
-	trimbase = 
+	base = cbf6cba
+	trimbase = 5239ca5
 	parent = upstream
 	previous = a868845
