--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
 	base = 9109d0c
-	trimbase = 2bd3ab3
+	trimbase = 
 	parent = upstream
 	previous = 690d421
