--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = ab0ef28
-	trimbase = 
+	base = 5743cb6
+	trimbase = ab0ef28
 	parent = upstream
 	previous = a868845
