--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 27029cc
-	trimbase = 
+	base = 99d855c
+	trimbase = 27029cc
 	parent = upstream
 	previous = a868845
