--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdhx
-	base = 56508d1
-	trimbase = 
+	base = 9d0e6a0
+	trimbase = 56508d1
 	parent = upstream
 	previous = a868845
