--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = c352f24
-	trimbase = 
+	base = 0a45e6e
+	trimbase = c352f24
 	parent = upstream
 	previous = bd9d22c
