--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 98792b1
-	trimbase = 
+	base = 8cc1953
+	trimbase = 98792b1
 	parent = upstream
 	previous = bd9d22c
