--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = 449d160
-	trimbase = 
+	base = 4769644
+	trimbase = 449d160
 	parent = upstream
 	previous = bd9d22c
