--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
 	base = cbf6cba
-	trimbase = 5239ca5
+	trimbase = 
 	parent = upstream
 	previous = a868845
