--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = b228d15
-	trimbase = 
+	base = ab2f046
+	trimbase = b228d15
 	parent = upstream
 	previous = bd9d22c
