--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = c8f8e6b
-	trimbase = 
+	base = 6017bf0
+	trimbase = c8f8e6b
 	parent = upstream
 	previous = bd9d22c
