--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = eff34f3
-	trimbase = 
+	base = 2ebc849
+	trimbase = eff34f3
 	parent = upstream
 	previous = bd9d22c
