--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = eff2229
-	trimbase = 
+	trim = schunk_sdh
+	base = 46add94
+	trimbase = eff2229
 	parent = upstream
 	previous = bd9d22c
