--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fff1231
-	trimbase = 
+	trim = schunk_description
+	base = b87b604
+	trimbase = fff1231
 	parent = upstream
 	previous = bd9d22c
