--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 43ca5aa
-	trimbase = 
+	trim = schunk_modular_robotics
+	base = 36af7fd
+	trimbase = 43ca5aa
 	parent = upstream
 	previous = bd9d22c
