--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fe2e0e8
-	trimbase = 
+	trim = schunk_simulated_tactile_sensors
+	base = 10366fe
+	trimbase = fe2e0e8
 	parent = upstream
 	previous = bd9d22c
