--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0cd8a93
-	trimbase = 
+	trim = schunk_libm5api
+	base = 05e926a
+	trimbase = 0cd8a93
 	parent = upstream
 	previous = bd9d22c
