--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36af7fd
+	base = 80bba05
 	trimbase = 
 	parent = release/kinetic/schunk_modular_robotics
-	previous = 
+	previous = 36af7fd
