--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 236f95d
+	base = b9944b0
 	trimbase = 
 	parent = debian/kinetic/schunk_modular_robotics
-	previous = 
+	previous = 236f95d
