--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 46add94
+	base = 5c412a5
 	trimbase = 
 	parent = release/kinetic/schunk_sdh
-	previous = 
+	previous = 46add94
