--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e6c7362
+	base = ebd3e8e
 	trimbase = 
 	parent = debian/kinetic/schunk_sdh
-	previous = 
+	previous = e6c7362
