--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b87b604
+	base = d87027c
 	trimbase = 
 	parent = release/kinetic/schunk_description
-	previous = 
+	previous = b87b604
