--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c3d1bc2
+	base = c9f5cf5
 	trimbase = 
 	parent = debian/kinetic/schunk_description
-	previous = 
+	previous = c3d1bc2
