--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d23457
+	base = e799ceb
 	trimbase = 
 	parent = debian/kinetic/schunk_libm5api
-	previous = 
+	previous = 7d23457
