--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 67aa132
+	base = 2ba4b4c
 	trimbase = 
 	parent = release/kinetic/schunk_powercube_chain
-	previous = 
+	previous = 67aa132
