--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a7b632
+	base = c462e29
 	trimbase = 
 	parent = debian/kinetic/schunk_powercube_chain
-	previous = 
+	previous = 1a7b632
