--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d4b92c
+	base = c93aa7d
 	trimbase = 
 	parent = debian/kinetic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = 0d4b92c
