--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f86172
+	base = 1436b1a
 	trimbase = 
 	parent = debian/kinetic/schunk_modular_robotics
-	previous = 
+	previous = 8f86172
