--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0a00e5a
+	base = 3b9fb4b
 	trimbase = 
 	parent = debian/kinetic/schunk_sdh
-	previous = 
+	previous = 0a00e5a
