--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4de47d3
+	base = f5e1800
 	trimbase = 
 	parent = debian/kinetic/schunk_description
-	previous = 
+	previous = 4de47d3
