--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e64c79
+	base = 4ce3fd6
 	trimbase = 
 	parent = debian/kinetic/schunk_libm5api
-	previous = 
+	previous = 8e64c79
