--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 64e58d9
+	base = 89edbb0
 	trimbase = 
 	parent = debian/kinetic/schunk_powercube_chain
-	previous = 
+	previous = 64e58d9
