--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 03f584d
+	base = 9a14e43
 	trimbase = 
 	parent = debian/kinetic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = 03f584d
