--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4632412
+	base = d44af56
 	trimbase = 
 	parent = rpm/kinetic/schunk_modular_robotics
-	previous = 
+	previous = 4632412
