--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a843eaa
+	base = 8c897d3
 	trimbase = 
 	parent = rpm/kinetic/schunk_sdh
-	previous = 
+	previous = a843eaa
