--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7baf06b
+	base = 066863f
 	trimbase = 
 	parent = rpm/kinetic/schunk_description
-	previous = 
+	previous = 7baf06b
