--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05e926a
+	base = 941f7d2
 	trimbase = 
 	parent = release/kinetic/schunk_libm5api
-	previous = 
+	previous = 05e926a
