--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 906f9ee
+	base = e9c6739
 	trimbase = 
 	parent = rpm/kinetic/schunk_libm5api
-	previous = 
+	previous = 906f9ee
