--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a5efc4
+	base = 5ed0f72
 	trimbase = 
 	parent = rpm/kinetic/schunk_powercube_chain
-	previous = 
+	previous = 5a5efc4
