--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 10366fe
+	base = aec9334
 	trimbase = 
 	parent = release/kinetic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = 10366fe
