--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1bd0235
+	base = 9a0a279
 	trimbase = 
 	parent = rpm/kinetic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = 1bd0235
