--- a/tracks.yaml
+++ b/tracks.yaml
@@ -57,9 +57,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: indigo_release_candidate
+    last_version: 0.6.9
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: git@github.com:ipa320/schunk_modular_robotics-release.git
     release_tag: :{version}
     ros_distro: kinetic
