--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 4eee5754
-	trimbase = 
+	base = eaf25035
+	trimbase = 4eee5754
 	parent = upstream
 	previous = ba623ee0
