--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 2265b57e
-	trimbase = 
+	base = bc1f94be
+	trimbase = 2265b57e
 	parent = upstream
 	previous = ba623ee0
