--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 54f56744
-	trimbase = 
+	base = 4ebf004a
+	trimbase = 54f56744
 	parent = upstream
 	previous = ba623ee0
