--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = cb7e3067
-	trimbase = 
+	base = 436fe1e6
+	trimbase = cb7e3067
 	parent = upstream
 	previous = ba623ee0
