--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = 24b598df
-	trimbase = 
+	base = dfd55904
+	trimbase = 24b598df
 	parent = upstream
 	previous = ba623ee0
