--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = 67aa132
-	trimbase = 8acb24b
+	trimbase = 
 	parent = upstream
 	previous = bd9d22c
