--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 0dc8fdda
-	trimbase = 
+	base = 58aff9e9
+	trimbase = 0dc8fdda
 	parent = upstream
 	previous = ba623ee0
