--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 177ec667
-	trimbase = 
+	base = ea5f9f82
+	trimbase = 177ec667
 	parent = upstream
 	previous = ba623ee0
