--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = ead35a68
-	trimbase = 
+	base = 5b747e35
+	trimbase = ead35a68
 	parent = upstream
 	previous = ba623ee0
