--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
 	base = 10366fe
-	trimbase = fe2e0e8
+	trimbase = 
 	parent = upstream
 	previous = bd9d22c
