--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = e77d2e12
-	trimbase = 
+	base = aae7377f
+	trimbase = e77d2e12
 	parent = upstream
 	previous = ba623ee0
