--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.9-0": ["Wed Jul 19 2017", "Mathias Luedtke", "mdl@ipa.fhg.de"]}
+{"0.6.10-0": ["Sun Jan 07 2018", "Florian Weisshardt", "fmw@ipa.fhg.de"], "0.6.9-0": ["Wed Jul 19 2017", "Mathias Luedtke", "mdl@ipa.fhg.de"]}
