--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = 15a099b1
-	trimbase = 69a9fa92
+	trimbase = 
 	parent = upstream
 	previous = ba623ee0
