--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = ecaca69
-	trimbase = 
+	base = 1b09805
+	trimbase = ecaca69
 	parent = upstream
 	previous = 1bd5d62
