--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 765d672
-	trimbase = 
+	base = 39b2eb2
+	trimbase = 765d672
 	parent = upstream
 	previous = 1bd5d62
