--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 933b479
-	trimbase = 
+	base = e3c7e72
+	trimbase = 933b479
 	parent = upstream
 	previous = 1bd5d62
