--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 448e987
-	trimbase = 
+	base = 2786286
+	trimbase = 448e987
 	parent = upstream
 	previous = 1bd5d62
