--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
 	base = 436fe1e6
-	trimbase = cb7e3067
+	trimbase = 
 	parent = upstream
 	previous = ba623ee0
