--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = e4345ec
-	trimbase = 
+	base = 51ce36e
+	trimbase = e4345ec
 	parent = upstream
 	previous = 1bd5d62
