--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = c1638c7
-	trimbase = 
+	base = e7ebbd3
+	trimbase = c1638c7
 	parent = upstream
 	previous = 1bd5d62
