--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = b120e86
-	trimbase = 
+	base = d46c754
+	trimbase = b120e86
 	parent = upstream
 	previous = 1bd5d62
