--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = fc4460c
-	trimbase = 
+	base = fee280f
+	trimbase = fc4460c
 	parent = upstream
 	previous = 1bd5d62
