--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
 	base = 180c8d2d
-	trimbase = 1e906346
+	trimbase = 
 	parent = upstream
 	previous = ba623ee0
