--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = ecdf009
-	trimbase = 
+	base = e027f92
+	trimbase = ecdf009
 	parent = upstream
 	previous = 1bd5d62
