--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 5fcedf2
-	trimbase = 
+	base = 840320d
+	trimbase = 5fcedf2
 	parent = upstream
 	previous = 1bd5d62
