--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = e0e7c44
-	trimbase = 
+	base = b1779fe
+	trimbase = e0e7c44
 	parent = upstream
 	previous = 1bd5d62
