--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b5b5f46
-	trimbase = 
+	trim = schunk_description
+	base = 480b064
+	trimbase = b5b5f46
 	parent = upstream
 	previous = 7d4743e
