--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2e5e75e
+	base = 9c8fcc8
 	trimbase = 
 	parent = debian/melodic/schunk_description
-	previous = 
+	previous = 2e5e75e
