--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f25f890
+	base = 97bcb61
 	trimbase = 
 	parent = debian/melodic/schunk_description
-	previous = 
+	previous = f25f890
