--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 480b064
+	base = 115c4c8
 	trimbase = 
 	parent = release/melodic/schunk_description
-	previous = 
+	previous = 480b064
