--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 930a389
+	base = b7234c0
 	trimbase = 
 	parent = rpm/melodic/schunk_description
-	previous = 
+	previous = 930a389
