--- a/tracks.yaml
+++ b/tracks.yaml
@@ -81,9 +81,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: melodic_release_candidate
+    last_version: 0.6.12
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: git@github.com:ipa320/schunk_modular_robotics-release.git
     release_tag: 0.6.12
     ros_distro: melodic
