--- a/tracks.yaml
+++ b/tracks.yaml
@@ -38,11 +38,11 @@ tracks:
     patches: null
     release_inc: '0'
     release_repo_url: git@github.com:ipa320/schunk_modular_robotics-release.git
-    release_tag: :{version}
+    release_tag: 0.6.12
     ros_distro: indigo
     vcs_type: git
     vcs_uri: https://github.com/ipa320/schunk_modular_robotics.git
-    version: :{auto}
+    version: 0.6.12
   kinetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
