--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = 1b09805
-	trimbase = ecaca69
+	trimbase = 
 	parent = upstream
 	previous = 1bd5d62
