--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 3c210dd
-	trimbase = 
+	base = d5bfd36
+	trimbase = 3c210dd
 	parent = upstream
 	previous = 7d4743e
