--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = befe9e4
-	trimbase = 
+	base = 54bc112
+	trimbase = befe9e4
 	parent = upstream
 	previous = 7d4743e
