--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = bc0f064
-	trimbase = 
+	base = 70c3258
+	trimbase = bc0f064
 	parent = upstream
 	previous = 7d4743e
