--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = bfb715a
-	trimbase = 
+	base = e172a39
+	trimbase = bfb715a
 	parent = upstream
 	previous = 7d4743e
