--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 4e6e029
-	trimbase = 
+	base = ca216ab
+	trimbase = 4e6e029
 	parent = upstream
 	previous = 7d4743e
