--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 5a3675d
-	trimbase = 
+	base = deb6f4d
+	trimbase = 5a3675d
 	parent = upstream
 	previous = 7d4743e
