--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = 9d2af5b
-	trimbase = ec14613
+	trimbase = 
 	parent = upstream
 	previous = 1bd5d62
