--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = d251b53
-	trimbase = 
+	base = fb312f6
+	trimbase = d251b53
 	parent = upstream
 	previous = 7d4743e
