--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = 566b1bb
-	trimbase = 
+	base = 1d2e77c
+	trimbase = 566b1bb
 	parent = upstream
 	previous = 7d4743e
