--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 7becf7e
-	trimbase = 
+	base = 690707b
+	trimbase = 7becf7e
 	parent = upstream
 	previous = 7d4743e
