--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 6b52d5e
-	trimbase = 
+	base = 9f23709
+	trimbase = 6b52d5e
 	parent = upstream
 	previous = 7d4743e
