--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 5f1443d
-	trimbase = 
+	base = a78d7ca
+	trimbase = 5f1443d
 	parent = upstream
 	previous = 7d4743e
