--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = c5d655d
-	trimbase = b3d0c8b
+	trimbase = 
 	parent = upstream
 	previous = 7d4743e
