--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 511a2c5c
-	trimbase = 
+	base = 702f05fe
+	trimbase = 511a2c5c
 	parent = upstream
 	previous = 7d4743e8
