--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = c26a7450
-	trimbase = 
+	base = b8acd349
+	trimbase = c26a7450
 	parent = upstream
 	previous = 7d4743e8
