--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 519e2c91
-	trimbase = 
+	base = 646433e2
+	trimbase = 519e2c91
 	parent = upstream
 	previous = 7d4743e8
