--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = eb08ef66
-	trimbase = 
+	base = f17050d5
+	trimbase = eb08ef66
 	parent = upstream
 	previous = 7d4743e8
