--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 94912f1b
-	trimbase = 
+	base = bd8b3a74
+	trimbase = 94912f1b
 	parent = upstream
 	previous = 5c3c3438
