--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = 09ac262d
-	trimbase = 
+	base = dca04a6c
+	trimbase = 09ac262d
 	parent = upstream
 	previous = 5c3c3438
