--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
 	base = d1963f12
-	trimbase = 8703ee71
+	trimbase = 
 	parent = upstream
 	previous = 7d4743e8
