--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = db840783
-	trimbase = 
+	base = bb7c1c81
+	trimbase = db840783
 	parent = upstream
 	previous = 5c3c3438
