--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
 	base = 64f2dfb1
-	trimbase = 2fb72479
+	trimbase = 
 	parent = upstream
 	previous = 7d4743e8
