--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = c1930884
-	trimbase = 
+	base = 26054b11
+	trimbase = c1930884
 	parent = upstream
 	previous = 5c3c3438
