--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 4e93a133
-	trimbase = 
+	base = 1188a067
+	trimbase = 4e93a133
 	parent = upstream
 	previous = 5c3c3438
