--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 221cd61c
-	trimbase = 
+	base = c4cd67a5
+	trimbase = 221cd61c
 	parent = upstream
 	previous = 5c3c3438
