--- a/tracks.yaml
+++ b/tracks.yaml
@@ -80,14 +80,14 @@ tracks:
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: melodic_release_candidate
+    devel_branch: indigo_dev
     last_version: 0.6.12
     name: upstream
     patches: null
     release_inc: '0'
     release_repo_url: git@github.com:ipa320/schunk_modular_robotics-release.git
-    release_tag: 0.6.12
+    release_tag: :{version}
     ros_distro: melodic
     vcs_type: git
     vcs_uri: https://github.com/ipa320/schunk_modular_robotics.git
-    version: 0.6.12
+    version: :{auto}
