Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.12-0": ["Thu Aug 16 2018", "Bruno Brito", "bfb@ipa.fhg.de"]}
+{"0.6.12-0": ["Thu Aug 16 2018", "Bruno Brito", "bfb@ipa.fhg.de"], "0.6.13-1": ["Tue Aug 20 2019", "Bruno Brito", "bfb@ipa.fhg.de"]}
