--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fbf30f6c
-	trimbase = 
+	trim = schunk_powercube_chain
+	base = 5bf7d85a
+	trimbase = fbf30f6c
 	parent = upstream
 	previous = 5c3c3438
