--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1ba9ce1d
-	trimbase = 
+	trim = schunk_sdh
+	base = 4ff928e1
+	trimbase = 1ba9ce1d
 	parent = upstream
 	previous = 5c3c3438
