--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
 	base = 9cef6935
-	trimbase = 96d5316f
+	trimbase = 
 	parent = upstream
 	previous = 5c3c3438
