--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = aae103f3
-	trimbase = 
+	base = 889f4140
+	trimbase = aae103f3
 	parent = upstream
 	previous = 5c3c3438
