--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7d8a929e
-	trimbase = 
+	trim = schunk_simulated_tactile_sensors
+	base = bf984555
+	trimbase = 7d8a929e
 	parent = upstream
 	previous = 5c3c3438
