--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6116ae61
-	trimbase = 
+	trim = schunk_libm5api
+	base = 78dcb867
+	trimbase = 6116ae61
 	parent = upstream
 	previous = 5c3c3438
