--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 594ae3ab
+	base = f580d4fa
 	trimbase = 
 	parent = debian/melodic/schunk_modular_robotics
-	previous = 
+	previous = 594ae3ab
