--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf984555
+	base = 4881acd9
 	trimbase = 
 	parent = release/melodic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = bf984555
