--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4aef3605
+	base = 00263ed8
 	trimbase = 
 	parent = debian/melodic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = 4aef3605
