--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5bf7d85a
+	base = 15e0d3f6
 	trimbase = 
 	parent = release/melodic/schunk_powercube_chain
-	previous = 
+	previous = 5bf7d85a
