--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9d13b444
+	base = 80db3dea
 	trimbase = 
 	parent = debian/melodic/schunk_powercube_chain
-	previous = 
+	previous = 9d13b444
