--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4ff928e1
+	base = 800d0468
 	trimbase = 
 	parent = release/melodic/schunk_sdh
-	previous = 
+	previous = 4ff928e1
