--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 86cfc1fd
+	base = bc3e546d
 	trimbase = 
 	parent = debian/melodic/schunk_sdh
-	previous = 
+	previous = 86cfc1fd
