--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 159d3009
+	base = 4ca7f42a
 	trimbase = 
 	parent = debian/melodic/schunk_libm5api
-	previous = 
+	previous = 159d3009
