--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 056d9cf7
+	base = 453cf45a
 	trimbase = 
 	parent = debian/melodic/schunk_modular_robotics
-	previous = 
+	previous = 056d9cf7
