--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aeb6d5e6
+	base = 09cdf4d4
 	trimbase = 
 	parent = debian/melodic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = aeb6d5e6
