--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fdaffc6f
+	base = fdb9e563
 	trimbase = 
 	parent = debian/melodic/schunk_powercube_chain
-	previous = 
+	previous = fdaffc6f
