--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 761bda88
+	base = 8a1e073a
 	trimbase = 
 	parent = debian/melodic/schunk_sdh
-	previous = 
+	previous = 761bda88
