--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4788552a
+	base = 5b4553a5
 	trimbase = 
 	parent = debian/melodic/schunk_libm5api
-	previous = 
+	previous = 4788552a
