--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a210797
+	base = ac35fbd2
 	trimbase = 
 	parent = release/melodic/schunk_modular_robotics
-	previous = 
+	previous = 5a210797
