--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9aef976b
+	base = cdd7cafa
 	trimbase = 
 	parent = rpm/melodic/schunk_modular_robotics
-	previous = 
+	previous = 9aef976b
