--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ac4f1454
+	base = 16f97d5e
 	trimbase = 
 	parent = rpm/melodic/schunk_simulated_tactile_sensors
-	previous = 
+	previous = ac4f1454
