--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d0450c13
+	base = 90606d01
 	trimbase = 
 	parent = rpm/melodic/schunk_powercube_chain
-	previous = 
+	previous = d0450c13
