--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ce96360
+	base = 44cd4589
 	trimbase = 
 	parent = rpm/melodic/schunk_sdh
-	previous = 
+	previous = 3ce96360
