--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 78dcb867
+	base = 56351f06
 	trimbase = 
 	parent = release/melodic/schunk_libm5api
-	previous = 
+	previous = 78dcb867
