--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14b1b9a8
+	base = 6d136f3f
 	trimbase = 
 	parent = rpm/melodic/schunk_libm5api
-	previous = 
+	previous = 14b1b9a8
