--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
 	base = bd8b3a74
-	trimbase = 94912f1b
+	trimbase = 
 	parent = upstream
 	previous = 5c3c3438
