--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 4f3c7e6e
-	trimbase = 
+	base = f9a9a40a
+	trimbase = 4f3c7e6e
 	parent = upstream
 	previous = 635b1172
