--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = ae5ba4d1
-	trimbase = 
+	base = 881eaf33
+	trimbase = ae5ba4d1
 	parent = upstream
 	previous = 635b1172
