--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = 12fa504f
-	trimbase = 
+	base = 034987dd
+	trimbase = 12fa504f
 	parent = upstream
 	previous = 635b1172
