--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 68322a4e
-	trimbase = 
+	base = 6ecbebde
+	trimbase = 68322a4e
 	parent = upstream
 	previous = 635b1172
