--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 54176731
-	trimbase = 
+	base = ebb036dc
+	trimbase = 54176731
 	parent = upstream
 	previous = 635b1172
