--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 25e09255
-	trimbase = 
+	base = 14db1792
+	trimbase = 25e09255
 	parent = upstream
 	previous = 635b1172
