--- a/tracks.yaml
+++ b/tracks.yaml
@@ -80,7 +80,7 @@ tracks:
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: indigo_dev
+    devel_branch: kinetic_dev
     last_version: 0.6.13
     name: upstream
     patches: null
