--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_powercube_chain
-	base = 0c00cbb2
-	trimbase = 
+	base = 9c4842ec
+	trimbase = 0c00cbb2
 	parent = upstream
 	previous = 635b1172
