--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_sdh
-	base = efcaa801
-	trimbase = 
+	base = 9d593b0c
+	trimbase = efcaa801
 	parent = upstream
 	previous = 635b1172
