--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
 	base = 889f4140
-	trimbase = aae103f3
+	trimbase = 
 	parent = upstream
 	previous = 5c3c3438
