--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_description
-	base = 1b7c13e9
-	trimbase = 
+	base = d188d746
+	trimbase = 1b7c13e9
 	parent = upstream
 	previous = 635b1172
