--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
 	base = 5a210797
-	trimbase = 586808a6
+	trimbase = 
 	parent = upstream
 	previous = 5c3c3438
