--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_modular_robotics
-	base = 3cbd8c5f
-	trimbase = 
+	base = e57f71b1
+	trimbase = 3cbd8c5f
 	parent = upstream
 	previous = 635b1172
