--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
 	base = bf984555
-	trimbase = 7d8a929e
+	trimbase = 
 	parent = upstream
 	previous = 5c3c3438
