--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_simulated_tactile_sensors
-	base = 7e7fbdf8
-	trimbase = 
+	base = 7dcd3e84
+	trimbase = 7e7fbdf8
 	parent = upstream
 	previous = 635b1172
