--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = schunk_libm5api
-	base = 8d5fa998
-	trimbase = 
+	base = f9a53515
+	trimbase = 8d5fa998
 	parent = upstream
 	previous = 635b1172
