Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.13-2": ["Tue Aug 27 2019", "Florian Weisshardt", "fmw@ipa.fhg.de"]}
+{"0.6.14-1": ["Thu Nov 21 2019", "Florian Weisshardt", "fmw@ipa.fhg.de"], "0.6.13-2": ["Tue Aug 27 2019", "Florian Weisshardt", "fmw@ipa.fhg.de"]}
