--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 635b1172
-	base = 437c5807
-	trim = 
-	trimbase = 
+	base = 7889dd37
+	trim = schunk_powercube_chain
+	trimbase = 437c5807
