--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 635b1172
-	base = b5a77aa7
-	trim = 
-	trimbase = 
+	base = f86208c6
+	trim = schunk_modular_robotics
+	trimbase = b5a77aa7
