--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 635b1172
-	base = 43b65ec3
-	trim = 
-	trimbase = 
+	base = f7ee9043
+	trim = schunk_description
+	trimbase = 43b65ec3
