--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 635b1172
-	base = 8333523a
-	trim = 
-	trimbase = 
+	base = 34e6c76a
+	trim = schunk_libm5api
+	trimbase = 8333523a
