--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 635b1172
-	base = 6d4658b8
-	trim = 
-	trimbase = 
+	base = 9001235f
+	trim = schunk_sdh
+	trimbase = 6d4658b8
