--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 635b1172
-	base = 5a101f90
-	trim = 
-	trimbase = 
+	base = 9c564bf2
+	trim = schunk_simulated_tactile_sensors
+	trimbase = 5a101f90
