--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_modular_robotics
-	previous = 
-	base = 74536911
+	previous = 74536911
+	base = 120e22df
 	trim = 
 	trimbase = 
