--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/schunk_libm5api
-	previous = 
-	base = 34e6c76a
+	previous = 34e6c76a
+	base = ded31c9b
 	trim = 
 	trimbase = 
