--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_libm5api
-	previous = 
-	base = af6b4a1d
+	previous = af6b4a1d
+	base = b2cf3947
 	trim = 
 	trimbase = 
