--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_powercube_chain
-	previous = 
-	base = 5dc1d927
+	previous = 5dc1d927
+	base = 0bfcca9d
 	trim = 
 	trimbase = 
