--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/schunk_simulated_tactile_sensors
-	previous = 
-	base = 9c564bf2
+	previous = 9c564bf2
+	base = 08c160ba
 	trim = 
 	trimbase = 
