--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_simulated_tactile_sensors
-	previous = 
-	base = b7b003b3
+	previous = b7b003b3
+	base = 6104c75f
 	trim = 
 	trimbase = 
