--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/schunk_description
-	previous = 
-	base = f7ee9043
+	previous = f7ee9043
+	base = f40780da
 	trim = 
 	trimbase = 
