--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_description
-	previous = 
-	base = f79ba1a6
+	previous = f79ba1a6
+	base = 5bdd6ca7
 	trim = 
 	trimbase = 
