--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/schunk_sdh
-	previous = 
-	base = 9001235f
+	previous = 9001235f
+	base = 6e3b2f09
 	trim = 
 	trimbase = 
