--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_sdh
-	previous = 
-	base = 7dc796c6
+	previous = 7dc796c6
+	base = c1217b4c
 	trim = 
 	trimbase = 
