--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_modular_robotics
-	previous = 
-	base = 917c6e48
+	previous = 917c6e48
+	base = 9f0c9dd9
 	trim = 
 	trimbase = 
