--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_description
-	previous = 
-	base = cb5ed182
+	previous = cb5ed182
+	base = aa7f41e9
 	trim = 
 	trimbase = 
