--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_libm5api
-	previous = 
-	base = 4395af7a
+	previous = 4395af7a
+	base = 1d067c70
 	trim = 
 	trimbase = 
