--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_simulated_tactile_sensors
-	previous = 
-	base = 7b2c9480
+	previous = 7b2c9480
+	base = 97c10057
 	trim = 
 	trimbase = 
