--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_powercube_chain
-	previous = 
-	base = 3bd50f2f
+	previous = 3bd50f2f
+	base = 92243f72
 	trim = 
 	trimbase = 
