--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/schunk_sdh
-	previous = 
-	base = aa0c8268
+	previous = aa0c8268
+	base = 60183302
 	trim = 
 	trimbase = 
