--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/schunk_description
-	previous = 
-	base = c3e840d1
+	previous = c3e840d1
+	base = bfb68072
 	trim = 
 	trimbase = 
