--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/schunk_simulated_tactile_sensors
-	previous = 
-	base = e6b1eefe
+	previous = e6b1eefe
+	base = 2b430a69
 	trim = 
 	trimbase = 
