--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/schunk_powercube_chain
-	previous = 
-	base = 7889dd37
+	previous = 7889dd37
+	base = 7b2a2d48
 	trim = 
 	trimbase = 
