--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/schunk_powercube_chain
-	previous = 
-	base = dc257372
+	previous = dc257372
+	base = 03a9a3fe
 	trim = 
 	trimbase = 
