--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/schunk_libm5api
-	previous = 
-	base = 35a83a92
+	previous = 35a83a92
+	base = e01cc448
 	trim = 
 	trimbase = 
