--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/schunk_sdh
-	previous = 
-	base = b410e1ef
+	previous = b410e1ef
+	base = 8af69fc7
 	trim = 
 	trimbase = 
