--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/schunk_modular_robotics
-	previous = 
-	base = f86208c6
+	previous = f86208c6
+	base = 06f663cd
 	trim = 
 	trimbase = 
