--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/schunk_modular_robotics
-	previous = 
-	base = 65eb6417
+	previous = 65eb6417
+	base = 51317553
 	trim = 
 	trimbase = 
